--- a/templates/index.html
+++ b/templates/index.html
@@ -7,27 +7,25 @@
     <meta name="viewport" content="width=divice-width,intial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 </head>
 <body>
     <header class="header">
-        <!-- Your existing header content here -->
-
-        <!-- Button container at the top right -->
         <div class="top-right-button-container">
             <button id="myButton">ABOUT US</button>
         </div>
     </header>
     <div class="wrapper">
-        <form action="#">
+        <form method="POST" action="/loginsuccessfull" onsubmit="return login_fun();">
             
             <h1 >ವೈDHया </h1>
             <br>
             <div class="input-box">
-                <input type="text" required="required">
+                <input type="text" required="required" id="login-username" name="username">
                 <span style="font-weight: 700px;">Username</span>
             </div>
             <div class="input-box">
-                <input type="password" required="required">
+                <input type="password" required="required" id="login-password" name="password">
                 <span style="font-weight: 700px;">Password</span>
             </div>
             <br>
