--- a/templates/index.html
+++ b/templates/index.html
@@ -6,34 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=divice-width,intial-scale=1.0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+    <title>ವೈDHया</title>
 </head>
-<body>
-    <header class="header">
-        <div class="top-right-button-container">
-            <button id="myButton">ABOUT US</button>
-        </div>
-    </header>
-    <div class="wrapper">
-        <form method="POST" action="/loginsuccessfull" onsubmit="return login_fun();">
-            
-            <h1 >ವೈDHया </h1>
-            <br>
-            <div class="input-box">
-                <input type="text" required="required" id="login-username" name="username">
-                <span style="font-weight: 700px;">Username</span>
-            </div>
-            <div class="input-box">
-                <input type="password" required="required" id="login-password" name="password">
-                <span style="font-weight: 700px;">Password</span>
-            </div>
-            <br>
-            <div class="remember-forgot">
-                <a href="#" >Forgot password</a>
-            </div>
-                <button type="submit" class="btn">Login</button><br>
 
-        </form>
+<body>
+    <div class="top-buttons">
+        <a href="{{ url_for('about') }}"><button id="myButton" data-translate>ABOUT US</button></a>
+        <select id="language-select" class="nav-link" name="languages">
+            <option value="en">English</option>
+            <option value="as">Assamese</option>
+            <option value="hi">Hindi</option>
+            <option value="bn">Bengali</option>
+            <option value="gu">Gujrati</option>
+            <option value="kn">Kannada</option>
+            <option value="ml">Malayalam</option>
+            <option value="mr">Marathi</option>
+            <option value="or">Odia</option>
+            <option value="pa">Punjabi</option>
+            <option value="ta">Tamil</option>
+            <option value="te">Telugu</option>
+        </select>
     </div>
+
+    <div class="mid-box">
+        <div class="wrapper">
+            <form method="POST" action="/loginsuccessfull" onsubmit="return login_fun();">
+
+                <div class="logo-name">
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-img">
+                    <h1>ವೈDHया </h1>
+                </div>
+
+                <br>
+                <div class="input-box">
+                    <input type="text" required="required" id="login-username" name="username">
+                    <span style="font-weight: 700px;" data-translate>Username</span>
+                </div>
+                <div class="input-box">
+                    <input type="password" required="required" id="login-password" name="password">
+                    <span style="font-weight: 700px;" data-translate>Password</span>
+                </div>
+                <br>
+                <div class="remember-forgot">
+                    <a href="#" data-translate="">Forgot password</a>
+                </div>
+                <button type="submit" class="btn" data-translate>Login</button><br>
+            </form>
+
+        </div>
+
+    </div>
+
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 </body>
+
+</html>
