--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/chatbot.css') }}">
+    <title>ವೈDHया</title>
     <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
 </head>
 
