--- a/templates/about.html
+++ b/templates/about.html
@@ -360,7 +360,7 @@
         <hr>
         <div class="faq">
           <button class="accordion" data-translate>
-            HWhere can I go to find other local services?
+            Where can I go to find other local services?
 
             <i class="fa-solid fa-chevron-down"></i>
           </button>
