--- a/templates/2options.html
+++ b/templates/2options.html
@@ -31,8 +31,8 @@
         <!-- //////////////////////////////////////////// add link to Description prediction page-->
         <div class="card">
             <a href="{{url_for('prediction1')}}">
-                <h2>Give Description</h2>
-                <p>Express your thoughts and emotions. Describe your feelings in detail to receive personalized support
+                <h2 data-translate>Give Description</h2>
+                <p data-translate>Express your thoughts and emotions. Describe your feelings in detail to receive personalized support
                     and guidance from our empathetic chatbot, your mental health companion.</p>
             </a>
         </div>
@@ -40,8 +40,8 @@
         <!-- ////////////////////////////////////////////add link to take test prediction page -->
         <div class="card">
             <a href="{{url_for('mcq')}}">
-            <h2>Take test</h2>
-            <p>Take our tailored mental health assessment. Answer thoughtfully to gain insights into your well-being.
+            <h2 data-translate>Take test</h2>
+            <p data-translate>Take our tailored mental health assessment. Answer thoughtfully to gain insights into your well-being.
                 Your responses guide our support for your mental wellness journey</p></a>
         </div>
 
