--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -27,11 +27,11 @@
             </div>
             <div class="chat-box-body" id="chat-box-body">
                 <div class="chat-box-body-receive">
-                    <p data-translate="">Hi, I'm your virtual assistant. How may I help you?</p>
+                    <p data-translate>Hi, I'm your virtual assistant. How may I help you?</p>
                 </div>
             </div>
             <div class="chat-box-footer">
-                <input placeholder="Enter..." type="text" onkeydown="sendMessage(event)" />
+                <input placeholder="Enter..." type="text" onkeydown="sendMessage(event)" data-translate/>
                 <i class="send far fa-paper-plane" onclick="sendMessageClick()"></i>
             </div>
         </div>
