--- a/templates/mcq.html
+++ b/templates/mcq.html
@@ -307,7 +307,7 @@
     </div>
 
     <div class="subbutton">
-      <input type="submit" value="Submit" class="button">
+      <input type="submit" value="Submit" class="button" data-translate>
     </div>
 
   </form>
