--- a/templates/predic.html
+++ b/templates/predic.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="main_div">
-    <h1 class="heading" data-translate data-translate>You Might have Symptoms of: </h1>
+    <h1 class="heading" data-translate>You Might have Symptoms of: </h1>
 
     {%if symp%}
     <div type="text" id="textBox" name="textBox" class="output-box">
