--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -1,43 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
-    background-image: url('../images/26800.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: 'Poppins', sans-serif;
+    background-color: #ecf7fd;
 }
 
 .chat-container {
-    width: 100%;
-    max-width: 600px;
-    /* Adjust the max-width as needed */
-    box-sizing: border-box;
-    padding: 20px;
+    width: 80rem;
+    height: 89vh;
+    /* max-width: 80rem; */
+    /* min-width: 80rem; */
+    /* box-sizing: border-box; */
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
 }
+
+.main-conc{
+    display: flex;
+}
+
+/* .main-original{
+    display: flex ;
+} */
+
+.left-part{
+    background-color: #B4E4FF;
+    border-right: 3px solid rgb(0, 0, 46);
+    width: 20rem;
+    color: black;
+    height: 89vh;
+    padding-inline: 20px;
+    /* text-align: justify; */
+    font-weight: 500;
+    /* max-width: 20rem;
+    min-width: 20rem; */
+}
+
+.left-part h2{
+    font-weight: 900;
+    margin-top: 30px;
+}
+
 
 .chat-box {
     width: 100%;
     box-sizing: border-box;
-    border-radius: 10px;
     overflow: hidden;
+    height:  89vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .chat-box-header {
     background-color: #3498db;
     color: #fff;
     padding: 15px;
+    height: 3rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -56,30 +76,134 @@ body {
 }
 
 .chat-box-body {
-    padding: 15px;
-    max-height: 320px;
+    padding: 30px;
+    /* max-height: 320px; */
     overflow-y: auto;
+    height: 83rem;
 }
 
 .chat-box-body-receive {
-    background-color: #ecf0f1;
+    border-radius: 10px;
+    padding: 10px;
+    gap: 10px;
+    margin-bottom: 10px;
+    border: none;
+    display: flex;
+    align-items: center;
+    overflow-wrap: break-word;
+    align-items: flex-end;
+}
+
+.chat-box-body-thinking{
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 10px;
     border: none;
+    display: flex;
+    align-items: center;
+    overflow-wrap: break-word;
 }
 
-.chat-box-body-receive p {
-    margin: 0;
-    font-size: 14px;
-    border: none;
+.chat-box-body-thinking p{
+    background-color: #f2f2f2;
+    padding: 12px 16px;
+    border-radius: 10px 10px 10px 0;
+    font-size: 0.95rem;
+    color: black;
+    max-width: 65%;
+    overflow-wrap: break-word;
 }
+
+.chat-box p{
+    display: flex;
+}
+
+.chat-box-body-receive p{
+    background-color: #f2f2f2;
+    padding: 12px 16px;
+    border-radius: 10px 10px 10px 0;
+    font-size: 0.95rem;
+    color: black;
+    max-width: 65%;
+    overflow-wrap: break-word;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-box-body-send{
+    margin: 20px 0;
+    justify-content: flex-end;
+    display: flex;
+    gap: 10px;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: none;
+    display: flex;
+    align-items: center;
+    overflow-wrap: break-word;
+    align-items: flex-end;
+}
+
+.chat-box-body-receive span{
+    height: 32px;
+    width: 32px;
+    color: #fff;
+    background: #3498db;
+    text-align: center; /* IMP*/
+    line-height: 32px; /* IMP*/
+    border-radius: 4px; /* IMP*/
+    user-select: none;
+}
+
+
+.chat-box-body-send span{
+    height: 32px;
+    width: 32px;
+    color: #3498db;
+    background: #edecec;
+    text-align: center; /* IMP*/
+    line-height: 32px; /* IMP*/
+    border-radius: 4px; /* IMP*/
+    margin-right: 10px;
+    user-select: none;
+}
+
+.chat-box-footer span{
+    height: 32px;
+    width: 32px;
+    color: #fff;
+    background: #3498db;
+    text-align: center; /* IMP*/
+    line-height: 32px; /* IMP*/
+    border-radius: 4px; /* IMP*/
+    user-select: none;
+    padding: 1px;
+    cursor: pointer;
+    justify-content: flex-end;
+}
+
+.chat-box-body-send p{
+    background-color: #3498db;
+    padding: 12px 16px;
+    border-radius: 10px 10px 0 10px;
+    font-size: 0.95rem;
+    color: #fff;  
+    max-width: 65%; 
+    
+}
+
 
 .chat-box-footer {
     display: flex;
     align-items: center;
-    padding: 10px;
-    background-color: #ecf0f1;
+    padding: 10px 20px 10px 10px;
+    height: 3rem;
+    /* background-color: #ecf0f1; */
+    margin: 30px;
+    border-radius: 10px;
+    border: 3px solid grey;
 }
 
 .chat-box-footer input {
@@ -89,7 +213,23 @@ body {
     outline: none;
     border-radius: 5px;
     margin-right: 10px;
-    font-size: 14px;
+    font-size: 16px;
+}
+
+.chat-box-footer textarea {
+    height: 1.2rem;
+    width: 100%;
+    display: flex;
+    padding: 8px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    font-size: 16px;
+    resize: none;
+    align-items: center;
+    justify-items: center;
+    overflow: hidden;
 }
 
 
@@ -101,19 +241,14 @@ body {
 }
 
 .navbar {
-    position: fixed;
+    background: linear-gradient(to right, #006aff, #030064);
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
     display: flex;
     justify-content: space-between;
-    top: 0px;
-    /* left:20px;  */
-    width: 100%;
-    /* margin-bottom: 40rem; */
-    background: linear-gradient(to right, #006aff, #030064);
-    /* Gradient background */
-    overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* Add a subtle shadow */
-    transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    align-items: center;
+    padding-inline: 20px;
+    height: 11vh;
 }
 
 .navbar a {
