--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -5,38 +5,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/chatbot.css') }}">
     <title>ವೈDHया</title>
     <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
 </head>
 
 <body>
-    <div class="navbar">
-        <div class="logo-name">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-img">
-            <h1 class="heading">ವೈDHया</h1>
-        </div>
-        <a href="{{url_for('dashboard')}}"><button data-translate>Dashboard</button></a>
-    </div>
-
-    <div class="chat-container">
-        <div class="chat-box" id="chatbox">
-            <div class="chat-box-header">
-                <h3 data-translate>Vaidhya Assistance</h3>
-                <p onclick="unToggleChatbox()"><i class="fa fa-times"></i></p>
+    <div class="main-original">
+        <div class="navbar">
+            <div class="logo-name">
+                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-img">
+                <h1 class="heading">ವೈDHया</h1>
             </div>
-            <div class="chat-box-body" id="chat-box-body">
-                <div class="chat-box-body-receive">
-                    <p data-translate>Hi, I'm your virtual assistant. How may I help you?</p>
+            <a href="{{url_for('dashboard')}}"><button data-translate>Dashboard</button></a>
+        </div>
+
+        <div class="main-conc">
+            <div class="left-part">
+                    <h2>Vaidhya Assistant</h2>
+                    <p>It is a Personalized AI Assistant, capable of answering any queries related to :</p>
+                    <ul>
+                        <li>Depression</li>
+                        <li>Anxiety Disorders</li>
+                        <li>Schizophrenia</li>
+                        <li>Bipolar Disorder</li>
+                        <li>Obsessive-Compulsive Disorder (OCD)</li>
+                        <li>Post-Traumatic Stress Disorder (PTSD)</li>
+                    </ul>
+                    <p>The Bot can only answere medical related queries so try to ask relevent questions.</p>
+            </div>
+            <div class="chat-container">
+                <div class="chat-box" id="chatbox">
+                    <div class="chat-box-header">
+                        <h3 data-translate>Vaidhya Assistance</h3>
+                    </div>
+                    <div class="chat-box-body" id="chat-box-body">
+                        <div class="chat-box-body-receive">
+                            <span class="material-symbols-outlined">smart_toy</span>
+                            <p data-translate>Hi, I'm your virtual assistant. How may I help you?</p>
+                        </div>
+                        <!-- <div class = "chat-box-body-send" >
+                            <p data-translate></p>
+                            <span class="material-symbols-outlined">person</span>
+                        </div> -->
+
+                    </div>
+                    <div class="chat-box-footer">
+                        <!-- <input placeholder="Send a message..." type="text" onkeydown="sendMessage(event)" data-translate /> -->
+                        <textarea placeholder="Ask a Question..." id="to-be-sent" onkeydown="sendMessage(event)" data-translate></textarea>
+                        <!-- <i class="send far fa-paper-plane" ></i> -->
+                        <span class="material-symbols-outlined" onclick="sendMessageClick()">send</span>
+
+                    </div>
                 </div>
             </div>
-            <div class="chat-box-footer">
-                <input placeholder="Enter..." type="text" onkeydown="sendMessage(event)" data-translate/>
-                <i class="send far fa-paper-plane" onclick="sendMessageClick()"></i>
-            </div>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='js/chatbot.js') }}"></script>
+
+    <script src="{{ url_for('static', filename='js/chatbot.js') }}" defer></script>
 </body>
 
 </html>
