implemented appointment system

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -68,7 +68,7 @@
                 <p data-translate>
                     Schedule and manage your medical appointments seamlessly.
                 </p data-translate>
-                <a href="https://bot.dialogflow.com/119833d1-c780-4981-a66e-5fd7286b4597" class="button">
+                <a href="{{url_for('appointment')}}" class="button">
                     <span data-translate>Get an Appointment </span>
                 </a>
             </div>
