--- a/static/css/appointment.css
+++ b/static/css/appointment.css
@@ -16,6 +16,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    cursor: default;
 }
 
 
@@ -267,8 +268,10 @@ form {
 margin-inline: 150px;
 }
 
-
-/* [type="radio"]:checked,
+input[type="radio"] {
+    cursor: default; /* Disable cursor line */
+  }
+[type="radio"]:checked,
 [type="radio"]:not(:checked) {
     position: absolute;
     left: -9999px;
@@ -322,5 +325,5 @@ margin-inline: 150px;
     box-shadow: inset 0 0 0 4px #ffff;
     border-color: #C7C8CC;
     background: #C7C8CC;
-} */
+}
 
