--- a/templates/about.html
+++ b/templates/about.html
@@ -28,13 +28,13 @@
   <header class="header">
     <div class="header__content">
       <div class="header__logo-container">
-
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-img">
         <span class="header__logo-sub">ವೈDHया</span>
       </div>
       <div class="header__main">
         <ul class="header__links">
           <li class="header__link-wrapper">
-            <a href="#about" class="header__link" data-translate>About </a>
+            <a href="#about" class="header__link" data-translate>About</a>
           </li>
 
           <li class="header__link-wrapper">
@@ -65,7 +65,7 @@
           </li>
 
           <li class="header__sm-menu-link">
-            <a href="" data-translate> About </a>
+            <a href="#about" data-translate> About </a>
           </li>
 
 
