--- a/templates/mcq.html
+++ b/templates/mcq.html
@@ -32,7 +32,7 @@
           scenario. Choose the option that best reflects your feelings and tendencies:
         </p>
         <br>
-        <label><input type="radio" name="q1" value="a" data-translate> I would feel too exhausted and unmotivated to
+        <label><input type="radio" name="q1" value="a"  required data-translate> I would feel too exhausted and unmotivated to
           attend. Socializing feels overwhelming right now.
         </label><br><br>
         <label><input type="radio" name="q1" value="b" data-translate> I would worry excessively about what others
@@ -56,7 +56,7 @@
       <div class="question-box">
         <p data-translate>You have an upcoming deadline at work. How do you typically handle the stress?</p>
         <br>
-        <label><input type="radio" name="q2" value="a" data-translate> I feel overwhelmed and struggle to focus on
+        <label><input type="radio" name="q2" value="a" required data-translate> I feel overwhelmed and struggle to focus on
           tasks.
         </label><br><br>
         <label><input type="radio" name="q2" value="b" data-translate> I become anxious and worry excessively about
@@ -84,7 +84,7 @@
       <div class="question-box">
         <p data-translate>You receive unexpected praise for your achievements. How do you react?</p>
         <br>
-        <label><input type="radio" name="q3" value="a" data-translate> I struggle to accept compliments and may feel
+        <label><input type="radio" name="q3" value="a"  required data-translate> I struggle to accept compliments and may feel
           that I don't deserve the praise.
         </label><br><br>
         <label><input type="radio" name="q3" value="b" data-translate> I become anxious and worry about living up to
@@ -109,7 +109,7 @@
         <p data-translate>You witness a car accident on the street. How does it affect you?
         </p>
         <br>
-        <label><input type="radio" name="q4" value="a" data-translate> I feel a deep sense of sadness and empathy
+        <label><input type="radio" name="q4" value="a" required data-translate> I feel a deep sense of sadness and empathy
           for those involved.
         </label><br><br>
         <label><input type="radio" name="q4" value="b" data-translate> I become anxious, and the noise may trigger
@@ -138,7 +138,7 @@
         <p data-translate>You are preparing for a social event with friends. How do you approach it?
         </p>
         <br>
-        <label><input type="radio" name="q5" value="a" data-translate> I may feel a lack of interest and energy,
+        <label><input type="radio" name="q5" value="a"  required data-translate> I may feel a lack of interest and energy,
           making socializing challenging.
         </label><br><br>
         <label><input type="radio" name="q5" value="b" data-translate> I become anxious and worry about how others
@@ -167,7 +167,7 @@
         <p data-translate>You find yourself in a crowded and noisy environment. How do you react?
         </p>
         <br>
-        <label><input type="radio" name="q6" value="a" data-translate> I feel overwhelmed and may withdraw from the
+        <label><input type="radio" name="q6" value="a" required data-translate> I feel overwhelmed and may withdraw from the
           environment.
         </label><br><br>
         <label><input type="radio" name="q6" value="b" data-translate> I become anxious, and the noise may trigger
@@ -196,7 +196,7 @@
         <p data-translate>You encounter a trigger related to a past traumatic event. How do you cope?
         </p>
         <br>
-        <label><input type="radio" name="q7" value="a" data-translate> I may experience a surge of emotions and find
+        <label><input type="radio" name="q7" value="a" required data-translate> I may experience a surge of emotions and find
           it challenging to move past the trigger.
         </label><br><br>
         <label><input type="radio" name="q7" value="b" data-translate> I become anxious, and the trigger may lead to
@@ -225,7 +225,7 @@
           approach it?
         </p>
         <br>
-        <label><input type="radio" name="q8" value="a" data-translate> I may feel indecisive and struggle to make
+        <label><input type="radio" name="q8" value="a" required data-translate> I may feel indecisive and struggle to make
           decisions due to a lack of interest.
         </label><br><br>
         <label><input type="radio" name="q8" value="b" data-translate> I become anxious, and the decision-making
@@ -255,7 +255,7 @@
           you?
         </p>
         <br>
-        <label><input type="radio" name="q9" value="a" data-translate> I feel a temporary lift in mood but may
+        <label><input type="radio" name="q9" value="a" required data-translate> I feel a temporary lift in mood but may
           struggle to sustain interest or motivation.
         </label><br><br>
         <label><input type="radio" name="q9" value="b" data-translate> I may feel anxious about maintaining the high
@@ -282,7 +282,7 @@
         <p data-translate>You are in a situation where you feel judged by others. How do you react?
         </p>
         <br>
-        <label><input type="radio" name="q10" value="a" data-translate> I internalize the judgment and may feel a
+        <label><input type="radio" name="q10" value="a" required data-translate> I internalize the judgment and may feel a
           sense of worthlessness.
         </label><br><br>
         <label><input type="radio" name="q10" value="b" data-translate> I become anxious and may avoid future
