--- a/static/css/doctordashboard.css
+++ b/static/css/doctordashboard.css
@@ -6,39 +6,54 @@ a{
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
-  /* background-color: #ecf7fd; */
-  background-image: url('../images/ob.jpg'); 
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #ecf7fd;
+    background-image: url('../images/ob2.jpg'); /* Replace with your background image */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
+.container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 50px;
 }
 
 .heading-nav {
     margin-left: 2%;
-    color: black;
+    color: #EB8242;
     font-size: 2.0em;
     width: 100%;
     justify-content: center;
 }
 
+.heading {
+    margin: 0 auto; /* Centers the element horizontally */
+    margin-top: 50px;
+    text-align: center; /* Centers the text inside the element */
+    color: #EB8242;
+    font-size: 2.5em;
+    width: 100%;
+}
+
+
 .navbar {
-    background: #FF8911; /* Gradient background */
+    background: #FFCF81; /* Gradient background */
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-inline: 20px;
-    height: 10vh;
 }
 
 .logout{
     background-color: white;
-    color: #FF8911;
+    color: #EB8242;
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
@@ -48,28 +63,11 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-.report {
-  background-color: #FBC687;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-left: auto;
-  font-size: medium;
-  font-family: 'Poppins', sans-serif;
-  margin: 25px;
-  color: black;
-  border: 1px solid #FF8911;
-}
-
-.report:hover {
-  font-weight: 900;
-}
-
 .logout:hover{
     font-weight: 900;
-
 }
+
+
 
 .navbar a {
     float: left;
@@ -79,6 +77,151 @@ body {
     padding: 14px 16px;
     text-decoration: none;
     transition: color 0.3s ease-in-out; /* Smooth color transition */
+}
+
+
+.image{
+        width: 90%; /* Make the image fill the container */
+        height: 180px;
+        border-radius: 8px; /* Add rounded corners to the image */
+         /* Add a subtle shadow to the image */
+        margin-bottom: 15px; /* Adjust spacing between image and text */
+    
+}
+.dashboard-intro{
+    margin-left: 2%;
+    color: #012d56;
+    font-size: 1.2em;
+    font-weight: 700;
+}
+
+
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.button {
+    border-radius: 4px;
+    background-color: #ecf7fd;
+    border: none;
+    color: #EB8242;
+    text-align: center;
+    height: 30px;
+    width: 200px;
+    padding: 5px;
+    transition: all 0.5s;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 800;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+  }
+  
+  .button span {
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+
+.card {
+  width: 20rem;
+  height: 25rem;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
+ 
+  img {
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    transition: opacity .2s ease-out;
+  }
+
+  h2 {
+    position: absolute;
+    inset: auto auto 30px 30px;
+    margin: 0;
+    font-weight: bolder;
+    transition: inset .3s .3s ease-out;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: white;
+  }
+  
+  p, a {
+    position: absolute;
+    opacity: 0;
+    max-width: 80%;
+    transition: opacity .3s ease-out;
+    color: #EB8242;
+  }
+  
+  p {
+    inset: auto auto 80px 30px;
+    color: white;
+  }
+  
+  a {
+    inset: auto auto 40px 30px;
+    color: inherit;
+    text-decoration: none;
+    color: #EB8242;
+  }
+  
+  &:hover h2 {
+    inset: auto auto 220px 30px;
+    transition: inset .3s ease-out;
+  }
+  
+  &:hover p, &:hover a {
+    opacity: 1;
+    transition: opacity .5s .1s ease-in;
+    font-weight: 600;
+  }
+  
+  &:hover img {
+    transition: filter .3s ease-in;
+    filter: blur(20px);
+  }
+
+  .material-symbols-outlined {
+  vertical-align: middle;
+  }
+
 }
 
 .logo-name{
@@ -91,132 +234,4 @@ body {
 
 .logo-img{
   height: 40px;
-}
-
-.seconddiv{
-  color: black;
-  width: 100%;
-  display: flex;
-  height:30vh
-}
-
-.thirddiv{
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, .5);
-  backdrop-filter: blur(5px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Add shadow for depth */
-  width: 98.5%;
-  height: 55vh;
-  border: none;
-  border-radius: 10px;
-  margin: 10px;
-}
-
-.statusf {
-  width: 30%;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, .5);
-  backdrop-filter: blur(100px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  border-radius: 10px;
-  margin: 10px;
-
-}
-
-.statuss{
-  width: 70%;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, .5);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Add shadow for depth */
-  backdrop-filter: blur(5px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  border-radius: 10px;
-  margin: 10px;
-}
-
-form{
-  width: 80%;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-
-
-
-.input-box {
-  position: relative;
-  margin: 10px;
-  display: flex;
-  align-items: center; /* Vertically center content */
-}
-
-.input-box input {
-  width:100%;
-  padding: 10px;
-  background:#fff;
-  border: 1px solid rgba(27, 22, 22, 0.304);
-  border-radius: 5px;
-  outline: none;
-  color: black;
-  font-size: 1em;
-  position: relative;
-}
-
-.input-box input::placeholder {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%); 
-  left: 0;
-  padding: 10px;
-  pointer-events: none;
-  font-size: 1em;
-  transition: 0.5s;
-  color: #666e7188;
-  font-family: 'Poppins', sans-serif;
-}
-
-
-.btn{
-  width:210px;
-  padding: 6px 10px 6px 10px;
-  background:#fff;
-  border: 1px solid #FF8911;
-  border-radius: 5px;
-  outline: none;
-  color: black;
-  font-size: 15px;
-  margin-bottom: 10px;
-  justify-content: center;
-  font-family: 'Poppins', sans-serif;
-  background-color: #FBC687;
-  color: black;
-
-}
-
-.btn:hover{
-  font-weight: 900;
-}
-
-p{
-  margin: 10px;
-  padding: 35px 25px 0px 25px;
-  display: flex;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-size: large;
-  font-weight: bolder;
-  color: #FF8911;
-}
-span{
-  color: black;
 }
