--- a/static/css/prediction.css
+++ b/static/css/prediction.css
@@ -86,6 +86,10 @@ body {
     box-sizing: border-box;
 }
 
+.logo-out{
+    height: 70px;
+}
+
 .output-box {
     background-color: white;
     border: 1px solid #9D9D9D;
@@ -111,7 +115,7 @@ body {
 }
 
 .heading{
-  color: #FC4100;
+  color: #FF6500;
 }
 
 .heading-1{
@@ -123,7 +127,7 @@ button {
     background-color: white;
     color: #FC4100;
     font-weight: 500;
-    border: none;
+    border: 1px solid #FF6500;
     border-radius: 5px;
     padding: 10px 20px;
     cursor: pointer;
