--- a/templates/doctordashboard.html
+++ b/templates/doctordashboard.html
@@ -9,8 +9,8 @@
     <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
@@ -22,47 +22,46 @@
         <button class="logout" onclick="logout()" data-translate>Logout</button>
     </div>
 
-    <div class="seconddiv">
-        <div class="statusf">
-            <form method="POST" action="/fetchpatientdetails" onsubmit="fetchdetails();">
-                <div class="input-box">
-                    <input type="text" required="required" id="patientid" name="patientid" data-translate placeholder="Patient ID"
-                        autocomplete="off" data-translate>
+    <h1 class="heading" data-translate>OUR SERVICES</h1>
 
-                </div>
 
-                <div class="input-box">
-                    <input type="password" required="required" id="key" name="key" data-translate placeholder="Key" >
-                </div>
-                <br>
-                <div>
-                    <button type="submit" class="btn" data-translate>Submit</button>
-                </div>
-            </form>
+    <div class="container">
+        <div class="card">
+            <img src="{{ url_for('static', filename='images/patient_report.jpg') }}"
+                alt="">
+            <div class="card-content">
+                <h2 data-translate>
+                    Patient Report
+                </h2>
+                <p data-translate>
+                    Check Status and Generate Patient Report.
+                </p>
+                <a href="{{url_for('patientReport')}}" class="button">
+                    <span data-translate>Patient Report </span>
+                </a>
+            </div>
         </div>
 
-        <div class="statuss">
-            <h1 data-translate>{{ message }}</h1>
+        <div class="card">
+            <img src="{{ url_for('static', filename='images/ap-bg.jpg') }}"
+                alt="">
+            <div class="card-content">
+                <h2 data-translate>
+                    Appointments
+                </h2>
+                <p data-translate>
+                    Manage your medical appointments seamlessly.
+                </p data-translate>
+                <a href="https://bot.dialogflow.com/119833d1-c780-4981-a66e-5fd7286b4597" class="button">
+                    <span data-translate>Get an Appointment </span>
+                </a>
+            </div>
         </div>
+
+
     </div>
-
-    <div class="thirddiv">
-        <p data-translate>Patient Name: <span data-translate> &nbsp; &nbsp;{{ name }} </span></p>
-        <p data-translate>Patient ID: <span data-translate> &nbsp; &nbsp;{{ pid }}</span></p>
-        <p data-translate>Patient Age: <span data-translate> &nbsp; &nbsp;{{ age }}</span></p>
-        <p data-translate>Patient Symptom Feel: <span data-translate> &nbsp; &nbsp;{{ sfeel }}</span></p>
-        <p data-translate>Patient Symptom Test: <span data-translate> &nbsp; &nbsp;{{ stest }}</span></p>
-
-        <div>
-            <button class="report" id="reportbtn"
-                onclick="downloadReport('{{name}}', '{{pid}}', '{{age}}', '{{sfeel}}', '{{stest}}', '{{doc_id}}', '{{doc_name}}')" data-translate>Download
-                Report</button>
-        </div>
-    </div>
-
 
     <script src="{{ url_for('static', filename='js/doctordashboard.js') }}"></script>
-
 </body>
 
 </html>
