--- a/templates/doctorLogin.html
+++ b/templates/doctorLogin.html
@@ -51,7 +51,12 @@
                 </div>
                 <br>
                 <div class="remember-forgot">
-                    <a href="#" data-translate="">Forgot password</a>
+                    <div>
+                        <a href="{{url_for('doctordashboard')}}">Create Account</a>
+                    </div>
+                    <div>
+                        <a href="{{url_for('doctordashboard')}}">Forgot Password?</a>
+                    </div>
                 </div>
                 <button type="submit" class="btn" data-translate>Login</button><br>
             </form>
