--- a/templates/doctordashboard.html
+++ b/templates/doctordashboard.html
@@ -61,7 +61,7 @@
 
     </div>
 
-    <script src="{{ url_for('static', filename='js/doctorappointment.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/doctordashboard.js') }}"></script>
 </body>
 
 </html>
