--- a/static/css/forgotpassword.css
+++ b/static/css/forgotpassword.css
@@ -20,7 +20,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background:url(../images/lg_bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -37,22 +36,10 @@ body {
 
 .mid-box{
     width: 100%;
-    height: 85vh;
+    he
     display: flex;
     align-items: center; 
     justify-content: center; 
-}
-
-.top-buttons{
-    display: flex;
-
-    width: 100%;
-    height: 15vh;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 2%;
-    padding-inline-end: 50px;
-    
 }
 
 
@@ -90,53 +77,17 @@ body {
     outline: none;
     color: black;
     font-size: 1em;
+    margin-top: 8px;
 }
 .input-box input::placeholder{
     color:black;
     font-size: bold;
 }
-.input-box span{
-    position: absolute;
-    left: 0;
-    padding: 10px;
-    pointer-events: none;
-    font-size: 1em;
-    transition: 0.5s;
-    color: #666e7188;
-}
 
-.input-box input:valid ~ span,
-.input-box input:focus ~ span
-{
-    color: black;
-    transform: translateX(10px) translateY(-7px);
-    font-size: .70em;
-    padding: 0 15px;
-    letter-spacing:0.2em;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    background:#fff;
-
-}
-.remember-forgot{
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-}
-
-.remember-forgot a{
-    color:black;
-    text-decoration: none;
-}
-.remember-forgot a:hover{
-    color: #E48F45;
-    font-weight: 900;
-}
 .wrapper .btn {
     width: 100%;
     height: 45px;
-    background: #F5CCA0; 
+    background: #9dede1; 
     border: none;
     outline: none;
     border-radius: 4px;
@@ -149,7 +100,7 @@ body {
 }
 
 .wrapper .btn:hover {
-    background:  #E48F45; 
+    background:  #0dcaad; 
 }
 
 .wrapper .btn:active {
@@ -176,38 +127,7 @@ body {
     
 }
 
-#myButton {
-    padding: 12px 20px;
-    background-color: #ffe8d0; /* Button background color */
-    color: #6B240C; /* Button text color */
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size:medium;
-    font-weight: 500;
-}
-
-#myButton:hover{
-    font-weight:900;
-}
-
-#language-select{
-    padding: 12px;
-     /* Adjust padding as needed */
-    background-color: #ffe8d0; /* Button background color */
-    color: #6B240C; /* Button text color */
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size:medium;
-    font-weight: 500;
-}
-
-#language-select:hover{
-    font-weight: 900;
-}
-
-.logo-name{
+.text-name{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -215,6 +135,6 @@ body {
 
 }
 
-.logo-img{
-    height: 40px;
+.lflu{
+    margin: 2px;
 }
