--- a/static/css/index.css
+++ b/static/css/index.css
@@ -118,12 +118,11 @@ body {
     background:#fff;
 
 }
-.wrapper .remember-forgot{
-    display: flex;
+.remember-forgot {
     justify-content: space-between;
     font-size: 14.5px;
     margin: -15px 0 15px;
-    float: right;
+    display: flex;
 }
 
 .remember-forgot a{
@@ -131,7 +130,8 @@ body {
     text-decoration: none;
 }
 .remember-forgot a:hover{
-    text-decoration: underline;
+    color: #0dcaad;
+    font-weight: 900;
 }
 .wrapper .btn {
     width: 100%;
