--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                         <a href="{{url_for('doctordashboard')}}">Create Account</a>
                     </div>
                     <div>
-                        <a href="{{url_for('doctordashboard')}}">Forgot Password?</a>
+                        <a href="{{url_for('forgotpassword')}}">Forgot Password?</a>
                     </div>
                 </div>
                 <button type="submit" class="btn" data-translate>Login</button><br>
