--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -31,7 +31,7 @@
                 <button type="submit" class="btn" data-translate>Next</button><br>
 
                 {% if message %}
-                    <h4 class="h4warning">Invalid username or email !</h4>
+                    <h4 class="h4warning">{{message}}</h4>
                 {% endif %}
             </form>
 
